# server

./: Cargo.toml
api/: Cargo.toml
api/src/: appdata.rs  config.rs  error.rs  main.rs
api/src/apis/: mod.rs  youtube.rs
api/src/services/: mod.rs  payload.rs  sse.rs
api/src/services/room/: create.rs  get.rs  join.rs  leave.rs  members.rs  mod.rs
api/src/services/sse/: broadcaster.rs  mod.rs  x_accept.rs
api/src/services/tracks/: add.rs  list.rs  mod.rs  sse_list.rs
api/src/services/tracks/find/: mod.rs  search.rs  youtube.rs
api/src/services/user/: get.rs
dal/: Cargo.toml  build.rs
dal/mysql_migrations/: V1__initial.sql  V2__tracks.sql  V3__pretrack.sql  V4__queue.sql
dal/src/: lib.rs  mysql_dal.rs  pretrack.rs  queue.rs  room.rs  track.rs  user.rs
proto/: Cargo.toml  build.rs
proto/src/: items.proto  lib.rs
