[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]

[dependencies]
actix-web = "4.0.1"
actix-protobuf = "0.7.0"
actix-rt = "2.6.0"
thiserror = "1.0.30"
envy = "0.4.2"
tokio-stream = "0.1.8"
parking_lot = "0.12.0"
serde_json = "1.0.79"
lazy_static = "1.4.0"
iso8601-duration = "0.1.0"
time = "0.3.7"
futures = "0.3.21"

# Tracing
tracing = "0.1.31"
tracing-actix-web = "0.5.1"

[dependencies.tracing-subscriber]
version = "0.3.9"
features = ["env-filter"]

[dependencies.tokio]
version = "1.17.0"
default-features = false
features = ["sync", "macros", "rt", "rt-multi-thread"]

[dependencies.proto]
path = "../proto"

[dependencies.dal]
path = "../dal"

[dependencies.prost]
version = "0.9.0"
default-features = false

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = ["rustls-tls", "json"]